styles can added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       #divAd,
       #container {
         text-align: center;
-        /* display: flex;
+        display: flex;
         justify-content: center;
-        align-items: center; */
-        /* border: 1px solid; */
-        /* height: fit-content;
-        width: fit-content; */
+        align-items: center;
+        border: 1px solid;
+        height: fit-content;
+        width: fit-content;
       }
       #btn {
         display: flex;
@@ -27,11 +27,11 @@
         background-color: #e50914;
         border: none;
       }
-      #adVideo,
+      /* #adVideo,
       iframe {
         height: 60vh;
         width: 50%;
-      }
+      } */
     </style>
   </head>
   <body>
